# WinLens

./: .gitignore  API_DOCUMENTATION.md  DAILY_SUMMARY.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_ROADMAP.md  PHASE_COMPLETION_SUMMARY.md  PROJECT_PLAN.md  PROJECT_PROGRESS.md  Product_design.html  Product_design.md  QUICK_START.md  QUICK_START_BUILD.md  README.md  RELEASE_NOTES.md  ROADMAP_INDEX.md  SECURITY_AUDIT.md  TASK_3_REPORT.md  TASK_4_REPORT.md  TASK_6_REPORT.md  TASK_7_REPORT.md  TECHNICAL_RISKS.md  install_dependencies.cmd  install_dependencies.sh  start_project.cmd  start_project.sh
privacy-auditor/: Cargo.toml
privacy-auditor-ui/: index.html  package-lock.json  package.json  tsconfig.json
privacy-auditor-ui/src/: App.css  App.tsx  tauriBridge.ts
privacy-auditor-ui/src-tauri/: Cargo.toml  tauri.conf.json
privacy-auditor-ui/src-tauri/src/: lib.rs  main.rs
privacy-auditor-ui/src/components/: Dashboard.tsx  Scanner.tsx
privacy-auditor-ui/src/styles/: Dashboard.css  Scanner.css
privacy-auditor/examples/: benchmark_filesystem.rs
privacy-auditor/src/: browser_analysis.rs  database.rs  error.rs  lib.rs  main.rs  metadata_analyzer.rs  models.rs  privacy_score.rs  scanner.rs  scanner_concurrent.rs  scanner_concurrent_simple.rs  scanning_pipeline.rs  scanning_pipeline_simple.rs  secret_detection.rs  windows_artifacts.rs
privacy-auditor/tests/: integration_tests.rs
