[package]
name = "privacy_auditor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Filesystem
walkdir = "2.4"
ignore = "0.4"
path-absolutize = "3.1"
num_cpus = "1.16"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Pattern matching & regex
regex = "1.10"

# Windows APIs (Windows only)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.53", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
] }
winreg = "0.52"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography
sha2 = "0.10"
md5 = "0.7"

# Utilities
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[example]]
name = "benchmark_filesystem"
path = "examples/benchmark_filesystem.rs"
